--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,39 @@
 .App {
-  text-align: center;
   display: flex;
   flex-direction: row;
 }
 
+.dialog-list {
+  padding: 10px;
+  overflow-y: scroll;
+  height: 100vh;
+  width: 30%;
+}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dialog-list-item {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.dialog-list-item.active,
+.dialog-list-item:hover {
+  background: grey;
+  color: white;
+}
+
+.dialog {
+  padding: 10px;
+  overflow-y: scroll;
+  height: 100vh;
+  width: 65%;
+}
+
+.dialog-send-message {
+  padding: 10px;
+  margin: 10px;
+}
+
+.dialog-send-message input,
+.dialog-send-message button {
+  padding: 10px;
 }
