--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   display: flex;
   flex-direction: row;
+  height: 100vh;
 }
 
 .dialog-list {
@@ -8,6 +9,8 @@
   overflow-y: scroll;
   height: 100vh;
   width: 30%;
+
+  box-shadow: 0 2px 10px 2px grey;
 }
 
 .dialog-list-item {
@@ -15,16 +18,19 @@
   cursor: pointer;
 }
 
-.dialog-list-item.active,
 .dialog-list-item:hover {
-  background: grey;
+  background: #ccc;
   color: white;
 }
 
+.dialog-list-item.active {
+  font-weight: bold;
+}
+
 .dialog {
-  padding: 10px;
+  padding: 5px 50px;
   overflow-y: scroll;
-  height: 100vh;
+  height: 100%;
   width: 65%;
 }
 
@@ -36,4 +42,8 @@
 .dialog-send-message input,
 .dialog-send-message button {
   padding: 10px;
+}
+
+.dialog-send-message .message-text {
+  width: 80%;
 }
