--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 .dialog-list {
-  padding: 10px;
+  padding: 0 10px;
   overflow-y: scroll;
   height: 100vh;
   width: 30%;
@@ -28,9 +28,9 @@
 }
 
 .dialog {
-  padding: 5px 50px;
+  padding: 0 50px;
   overflow-y: scroll;
-  height: 100%;
+  height: 100vh;
   width: 65%;
 }
 
