--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 .App {
   display: flex;
   flex-direction: row;
-  height: 100vh;
+  height: 90vh;
 }
 
 .dialog-list {
-  padding: 0 10px;
+  padding: 10px 10px;
   overflow-y: scroll;
-  height: 100vh;
+  height: 90vh;
   width: 30%;
 
   box-shadow: 0 2px 10px 2px grey;
@@ -28,9 +28,9 @@
 }
 
 .dialog {
-  padding: 0 50px;
+  padding: 10px 50px;
   overflow-y: scroll;
-  height: 100vh;
+  height: 90vh;
   width: 65%;
 }
 
